# MultiThreading

./: .gitignore
task_1/: CMakeLists.txt
task_1/src/: main.cxx
task_2/: CMakeLists.txt
task_2/src/: main.cxx
